--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "build-server": "tsc --build",
-    "server": "nodemon ./dist/server.js",
+    "server": "node --es-module-specifier-resolution=node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
